[gd_scene load_steps=7 format=3 uid="uid://ca3h8fh63b7pd"]

[ext_resource type="Script" path="res://temp/player_nub.gd" id="1_dffop"]
[ext_resource type="Script" path="res://temp/Skill Dice.gd" id="3_lwvk8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d65vx"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdrqm"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsgrj"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bj8vs"]
bg_color = Color(1, 1, 0, 1)

[node name="PlayerNub" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 441.0
offset_bottom = 91.0
script = ExtResource("1_dffop")

[node name="Name" type="Label" parent="."]
layout_mode = 1
offset_right = 152.0
offset_bottom = 26.0
text = "NAME HERE"

[node name="HP" type="ProgressBar" parent="."]
layout_mode = 1
offset_top = 25.0
offset_right = 149.0
offset_bottom = 33.0
theme_override_styles/background = SubResource("StyleBoxFlat_d65vx")
theme_override_styles/fill = SubResource("StyleBoxFlat_xdrqm")
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="HP"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 78.5
offset_top = -12.5
offset_right = 118.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "X/X"
horizontal_alignment = 1

[node name="SR" type="ProgressBar" parent="."]
layout_mode = 1
offset_top = 40.0
offset_right = 150.0
offset_bottom = 49.0
theme_override_styles/background = SubResource("StyleBoxFlat_tsgrj")
theme_override_styles/fill = SubResource("StyleBoxFlat_bj8vs")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="SR"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = -12.5
offset_right = 119.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "X/X"
horizontal_alignment = 1

[node name="Select" type="Button" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 55.0
offset_right = 197.0
offset_bottom = 86.0
text = "Select"

[node name="Damage" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 6.0
offset_right = 293.0
offset_bottom = 37.0
placeholder_text = "Dmg"

[node name="DealHP" type="Button" parent="Damage"]
layout_mode = 0
offset_left = 1.0
offset_top = 41.0
offset_right = 31.0
offset_bottom = 72.0
text = "HP"

[node name="DealSR" type="Button" parent="Damage"]
layout_mode = 0
offset_left = 42.0
offset_top = 42.0
offset_right = 72.0
offset_bottom = 73.0
text = "SR"

[node name="DealBoth" type="Button" parent="Damage"]
layout_mode = 0
offset_left = 87.0
offset_top = -1.0
offset_right = 132.0
offset_bottom = 30.0
text = "Both"

[node name="Initiative" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 130.0
offset_bottom = 86.0
text = "Initiative: X"

[node name="Dice Chain" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 380.0
offset_top = 27.0
offset_right = 524.0
offset_bottom = 67.0
script = ExtResource("3_lwvk8")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Damage/DealHP" to="." method="_on_deal_hp_pressed"]
[connection signal="pressed" from="Damage/DealSR" to="." method="_on_deal_sr_pressed"]
[connection signal="pressed" from="Damage/DealBoth" to="." method="_on_deal_both_pressed"]
